--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>net.hu</groupId>
     <artifactId>Webshop</artifactId>
     <version>1.0</version>
+    <packaging>war</packaging>
 
     <build>
         <plugins>
