fixed resources not being deployed to tomcat & added index servlet

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <warSourceDirectory>${basedir}/web</warSourceDirectory>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
