--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.0</version>
                 <configuration>
                     <warSourceDirectory>${basedir}/web</warSourceDirectory>
                 </configuration>
